# Chess

./: .gitignore  CMakeLists.txt
dependencies/SFML/: Makefile  SFMLSharedTargets.cmake  cmake_install.cmake
dependencies/SFML/lib/: libsfml-graphics.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
dependencies/SFML/src/SFML/: Makefile  cmake_install.cmake
dependencies/SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
dependencies/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
dependencies/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
dependencies/SFML/src/SFML/System/: Makefile  cmake_install.cmake
dependencies/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
include/: Bishop.h  Game.h  King.h  Pawn.h  Piece.h  PieceInfo.h  Renderer.h  Rook.h  Smart.h
include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/: Chess.cpp  Game.cpp  Pawn.cpp  Piece.cpp  PieceInfo.cpp  Renderer.cpp  Smart.cpp
